objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Opportunity_Source__c</fullName>
        <label>Opportunity Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2019 Back in Black Blitz</fullName>
                </value>
                <value>
                    <fullName>Acquisition-Operation Unite</fullName>
                </value>
                <value>
                    <fullName>Back to Business 2020</fullName>
                </value>
                <value>
                    <fullName>Back to Business - Remote 2020</fullName>
                </value>
                <value>
                    <fullName>Back to School 2020</fullName>
                </value>
                <value>
                    <fullName>Back to School - Remote 2020</fullName>
                </value>
                <value>
                    <fullName>BTS - Desk Shields</fullName>
                </value>
                <value>
                    <fullName>Cold Call</fullName>
                </value>
                <value>
                    <fullName>Dispenser Placement Program</fullName>
                </value>
                <value>
                    <fullName>Focus on Facilities</fullName>
                </value>
                <value>
                    <fullName>Furniture – CompuCom Interiors Referral</fullName>
                </value>
                <value>
                    <fullName>Furniture – CompuCom Solution Café</fullName>
                </value>
                <value>
                    <fullName>Furniture – K12 Referral</fullName>
                </value>
                <value>
                    <fullName>Furniture – Operations Unite</fullName>
                </value>
                <value>
                    <fullName>Furniture – RFP Interiors</fullName>
                </value>
                <value>
                    <fullName>Healthcare PPE 2020</fullName>
                </value>
                <value>
                    <fullName>Healthy Schools</fullName>
                </value>
                <value>
                    <fullName>HON Refer &amp; Earn</fullName>
                </value>
                <value>
                    <fullName>HP BD Conversion</fullName>
                </value>
                <value>
                    <fullName>Office Depot Opportunity with CompuCom Services</fullName>
                </value>
                <value>
                    <fullName>Omnia - CBFS email campaign</fullName>
                </value>
                <value>
                    <fullName>OMNIA Top 100</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Print - Day 1</fullName>
                </value>
                <value>
                    <fullName>Real-Estate Group 2020</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Televerde</fullName>
                </value>
                <value>
                    <fullName>EUC of CA CBFS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oracle_Party_Id__c</fullName>
        <label>Oracle Party Id</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oracle_Party_Number__c</fullName>
        <label>Oracle Party Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <inlineHelpText>Required when Type has a value &amp; closed Status</inlineHelpText>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Contacted, budget constraints</fullName>
                </value>
                <value>
                    <fullName>Contacted, not interested</fullName>
                </value>
                <value>
                    <fullName>Contacted, not right decision maker</fullName>
                </value>
                <value>
                    <fullName>Contacted, purchasing from another provider</fullName>
                </value>
                <value>
                    <fullName>Contacted, will add to daily purchases</fullName>
                </value>
                <value>
                    <fullName>Customer does not fit play</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unable to make contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outsourcing_Level__c</fullName>
        <label>Outsourcing Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>75%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Override_Duplicate_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To create duplicate contact when lead converted</description>
        <label>Override Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Duplicate_Check_ownerid__c</fullName>
        <label>Override Duplicate Check ownerid</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Is_Queue__c</fullName>
        <formula>IF(CONTAINS(LEFT(Owner:Queue.Id,3), &quot;00G&quot;) || ( Owner:User.System_User__c = true) , &quot;true&quot;, &quot;false&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Is Queue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Modified_Date__c</fullName>
        <label>Owner Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <formula>Owner:User.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PID__c</fullName>
        <label>PID</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Size__c</fullName>
        <label>Partner Size</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Sub_Agent_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Sub-Agent Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Contact must at the Partner Sub-Agent Account.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Sub_Agent__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads_Partner_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Sub_Agent_Number__c</fullName>
        <formula>Sub_Agent__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Sub-Agent Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Partner_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_lead__c</fullName>
        <formula>IF(CreatedById = $User.Id , 1, 0)</formula>
        <label>Partner lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payroll_HR_Buying__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Buying</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payroll_HR_Interested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Pot_Disposition_Reason__c</fullName>
        <label>Pot Disposition Reason</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pot_Disposition__c</fullName>
        <label>Pot Disposition</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pot_Other_Disposition_Reason__c</fullName>
        <label>Pot Other Disposition Reason</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_DeDuplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential DeDuplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field identifies if the current lead has any potential duplicates matching other leads, accounts and contacts</description>
        <label>Potential Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_TZ_Monthly_Spend__c</fullName>
        <label>Potential TZ Monthly Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_Warning_Key__c</fullName>
        <label>Potential Warning Key</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrimaryCompetitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Competitor</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <errorMessage>Qualifying Lead (US) can be associated to US Competitor only and Qualifying Deal (G&amp;T) can be associated to Canada Competitor only.</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Qualifying Deal (US)</value>
            </filterItems>
            <filterItems>
                <field>OpportunityCompetitor__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>US</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Qualifying Deal (G&amp;T)</value>
            </filterItems>
            <filterItems>
                <field>OpportunityCompetitor__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Canada</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OpportunityCompetitor__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductSubtype__c</fullName>
        <label>Product Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Automatic Toner Replenishment (ATR)</fullName>
                </value>
                <value>
                    <fullName>Batteries</fullName>
                </value>
                <value>
                    <fullName>Blue Ribbon</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Brand Identity</fullName>
                </value>
                <value>
                    <fullName>Branding/Fundraising</fullName>
                </value>
                <value>
                    <fullName>Break Room</fullName>
                </value>
                <value>
                    <fullName>Business Essentials</fullName>
                </value>
                <value>
                    <fullName>Business Services</fullName>
                </value>
                <value>
                    <fullName>C2 Collaborative</fullName>
                </value>
                <value>
                    <fullName>Charging Carts</fullName>
                </value>
                <value>
                    <fullName>Checks and Forms</fullName>
                </value>
                <value>
                    <fullName>Classroom Technology</fullName>
                </value>
                <value>
                    <fullName>Cleaning</fullName>
                </value>
                <value>
                    <fullName>Cleaning &amp; Maintenance</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Collaborative Classroom</fullName>
                </value>
                <value>
                    <fullName>CPD Instructional Materials</fullName>
                </value>
                <value>
                    <fullName>​Custom Stamps</fullName>
                </value>
                <value>
                    <fullName>Custom Stationery Online</fullName>
                </value>
                <value>
                    <fullName>Document Print Services</fullName>
                </value>
                <value>
                    <fullName>Document Storage (File Cabinet)</fullName>
                </value>
                <value>
                    <fullName>Engraved Signs</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Equipment &amp; Service</fullName>
                </value>
                <value>
                    <fullName>Ergo Accessories</fullName>
                </value>
                <value>
                    <fullName>File Cabinet</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Supplies</fullName>
                    <default>true</default>
                    <label>All Supplies</label>
                </value>
                <value>
                    <fullName>CBS</fullName>
                </value>
                <value>
                    <fullName>CPD-Promo</fullName>
                </value>
                <value>
                    <fullName>Filing &amp; Binding</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
                <value>
                    <fullName>Labels &amp; Forms</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Office Essentials</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Promo</fullName>
                </value>
                <value>
                    <fullName>Writing Drafting</fullName>
                </value>
                <value>
                    <fullName>Office Supplies</fullName>
                </value>
                <value>
                    <fullName>Catalog Furniture</fullName>
                </value>
                <value>
                    <fullName>Contract Furniture</fullName>
                </value>
                <value>
                    <fullName>CPD-Print</fullName>
                </value>
                <value>
                    <fullName>CBS/Facilities</fullName>
                </value>
                <value>
                    <fullName>Ink Toner</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
                <value>
                    <fullName>Tech</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products_Services_Buying__c</fullName>
        <label>Products &amp; Services Buying</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bizbox_Services</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Area(s) of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bizbox_Services</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjectOngoing__c</fullName>
        <label>Project/Ongoing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordType_Name__c</fullName>
        <description>RecordType name as Text</description>
        <formula>RecordType.Name</formula>
        <label>RecordType Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Page_Link__c</fullName>
        <formula>&quot;/&quot; +  Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Page Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Client_Type__c</fullName>
        <label>Referral Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Lead_Source__c</fullName>
        <description>Represents the Lead Source value on the original Lead or Contact sent in a Referral.</description>
        <label>Referral Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>800#</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>ITaaS Lead</fullName>
                </value>
                <value>
                    <fullName>Office Depot</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Refer &amp; Earn</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Origin__c</fullName>
        <label>Referral Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Referral_Organizations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referrar__c</fullName>
        <label>Referrer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Email__c</fullName>
        <inlineHelpText>Email of Office Depot Associate who sourced this deal.</inlineHelpText>
        <label>Referrer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referrer_Phone__c</fullName>
        <inlineHelpText>Phone number of Office Depot Associate who sourced this deal.</inlineHelpText>
        <label>Referrer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Related_Account_Status__c</fullName>
        <formula>IF( text(Account__r.Status__c) ==  &apos;Inactive&apos; , &apos;Inactive Account&apos;, text(Account__r.Type))</formula>
        <label>Related Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Site</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>Account.RecordType_Name__c</field>
                <operation>equals</operation>
                <value>Site</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType_Name__c</field>
                <operation>equals</operation>
                <value>Site (GT)</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType_Name__c</field>
                <operation>equals</operation>
                <value>Site (OfficeMax)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Qualifying Deals</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>Relationship of referee to lead</description>
        <label>Relationship</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Lead_Source__c</fullName>
        <label>Rep Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAL_Date__c</fullName>
        <label>SAL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAL__c</fullName>
        <formula>NOT(ISBLANK(SAL_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGCOM3__SG_InfoGroupDatabase__c</fullName>
        <description>The InfoGroup Database</description>
        <label>InfoGROUP Database</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGCOM3__SG_infoGroupId__c</fullName>
        <label>infoGroup Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <label>SIC Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Person_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person ID</label>
        <referenceTo>Sales_Person__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Play__c</fullName>
        <inlineHelpText>Editable by System Admin or Upload</inlineHelpText>
        <label>Type (play type)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Play</fullName>
                </value>
                <value>
                    <fullName>Marketing Interest</fullName>
                </value>
                <value>
                    <fullName>Sales Initiative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Rep_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Search_Engine_Marketing_Buying__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Buying</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Search_Engine_Marketing_Interested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email_To_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email To Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Email_To_Previous_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email To Previous Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Lead_Notification_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Lead Notification Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seq_Number__c</fullName>
        <label>Sequence Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sites__c</fullName>
        <label>Sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Social_Media_Marketing_Buying__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Buying</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Media_Marketing_Interested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Media_Profile__c</fullName>
        <label>Social Media Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>field created for market view</description>
        <label>Source</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Internal__c</fullName>
        <label>State Internal</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <inlineHelpText>This field is required in order to convert  (Unless lead is directly linked to an account)</inlineHelpText>
        <label>State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Store_District__c</fullName>
        <formula>Store__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Number__c</fullName>
        <label>Store Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Region__c</fullName>
        <formula>Store__r.Market__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please Enter a 6 Digit Store Number - Example : 000004</inlineHelpText>
        <label>Store</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>